--- a/templates/base.html
+++ b/templates/base.html
@@ -25,12 +25,10 @@
           <a href="{% url 'multiplication' %}" class="btn btn-success">ตารางแม่สูตรคูณ🐈</a>
         </li>
         </li>
+        <li class="nav-item">
+          <a href="{% url 'students' %}"  class="btn btn-light">🌷͙֒  รายชื่อนักเรียน ᰔᩚ</a>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
-    <div class="container mt-5">
-        {% block content %}
-        <!-- Content will be injected here -->
-        {% endblock content %}  
-    </div>
