--- a/templates/students.html
+++ b/templates/students.html
@@ -4,38 +4,8 @@
   <div class="mb-4">
     <h1>{{ title }}</h1>
   </div>
-  
-  <form method="post">
-    {% csrf_token %}
-    <div class="row">
-      <div class="col-md-2">
-        <input type="number" name="stuid" class="form-control" placeholder="รหัสนักศึกษา" required>
-      </div>
-      <div class="col-md-2">
-        <select name="name_prefix" class="form-control" required>
-          <option value="">คำนำหน้า</option>
-          <option value="นาย">นาย</option>
-          <option value="นาง">นาง</option>
-          <option value="นางสาว">นางสาว</option>
-        </select>
-      </div>
-      <div class="col-md-2">
-        <input type="text" name="first_name" class="form-control" placeholder="ชื่อ" required>
-      </div>
-      <div class="col-md-2">
-        <input type="text" name="last_name" class="form-control" placeholder="นามสกุล" required>
-      </div>
-      <div class="col-md-2">
-        <input type="number" name="age" class="form-control" placeholder="อายุ" min="1" required>
-      </div>
-      <div class="col-md-2">
-        <button type="submit" class="btn btn-success">เพิ่มนักเรียน</button>
-      </div>
-    </div>
-  </form>
-
   <!-- ตารางรายชื่อนักเรียน -->
-  <table class="table mt-4">
+  <table class="table">
     <thead>
       <tr>
         <th scope="col">#</th>
