--- a/templates/base.html
+++ b/templates/base.html
@@ -11,22 +11,22 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a href="{% url 'index' %}" class="btn btn-warning">🍙♡‹หน้าแรก🎧“</a>
+          <a href="{% url 'index' %}" class="btn btn-light">Home</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'about' %}" class="btn btn-success">🌷͙֒ᰔᩚเกี่ยวกับ🐈</a>
+          <a href="{% url 'about' %}" class="btn btn-light">About</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'contact' %}" class="btn btn-light">૮₍´˶• . •ติดต่อ ⑅ ₎ა</a>
+          <a href="{% url 'contact' %}" class="btn btn-light">Contact</a>
           <li class="nav-item">
-          <a href="{% url 'for' %}" class="btn btn-warning">🍙♡วนซ้ำข้อมูล🎧“</a>
+          <a href="{% url 'for' %}" class="btn btn-light">Loop</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'multiplication' %}" class="btn btn-success">ตารางแม่สูตรคูณ🐈</a>
+          <a href="{% url 'multiplication' %}" class="btn btn-light">ตารางแม่สูตรคูณ</a>
         </li>
         </li>
         <li class="nav-item">
-          <a href="{% url 'students' %}"  class="btn btn-light">🌷͙֒  รายชื่อนักเรียน ᰔᩚ</a>
+          <a href="{% url 'students' %}"  class="btn btn-light">รายชื่อนักเรียน </a>
         </li>
       </ul>
     </div>
