--- a/templates/about.html
+++ b/templates/about.html
@@ -1,70 +1,70 @@
 {% include 'base.html' %}
 <div class="container mt-5">
-    <h1>🍄🦋เกี่ยวกับ🌸💗</h1>
+    <h1>สินค้า</h1>
     <div class="row">
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="https://down-th.img.susercontent.com/file/th-11134207-23030-s64eteb7moov4a" class="card-img-top" alt="...">
+                <img src="https://images.samsung.com/is/image/samsung/p6pim/th/feature/166481421/th-feature-navy-548736793?$900_N_JPG$" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">พวงกุญแจคุโรมิ</h5>
-                    <p class="card-text">ราคาเริ่มต้นที่ 35฿</p>
+                    <h5 class="card-title">Galaxy S25 FE</h5>
+                    <p class="card-text">ราคาเริ่มต้นที่ ฿29,900.00</p>
                     <p class="card-text">สินค้าในคลังเหลือ 257ชิ้น</p>
-                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยนะคะ</a>
+                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยครับ</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="https://cf.shopee.co.th/file/41ffa2d803ba3f79fdb5504ccbf1fcb2" class="card-img-top" alt="...">
+                <img src="https://images.samsung.com/is/image/samsung/p6pim/th/sm-s731bdbbthl/gallery/th-galaxy-s25-fe-sm-s731-sm-s731bdbbthl-thumb-548736611?$492_492_PNG$" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">พวงกุญแจมิกกี้เมาส์</h5>
-                    <p class="card-text">ราคาเริ่มต้นที่ 30฿</p>
+                    <h5 class="card-title">Galaxy S25+</h5>
+                    <p class="card-text">ราคาเริ่มต้นที่ ฿31,900.00</p>
                     <p class="card-text">สินค้าในคลังเหลือ 102 ชิ้น</p>
-                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยนะคะ</a>
+                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยครับ</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="https://cf.shopee.co.th/file/sg-11134201-22110-5ryiu8glhdjv2b" class="card-img-top" alt="...">
+                <img src="https://images.samsung.com/is/image/samsung/p6pim/th/2501/gallery/th-galaxy-s25-s938-sm-s938bzbbthl-thumb-544709783?$492_492_PNG$" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">พวงกุญแจคิตตี้</h5>
-                    <p class="card-text">ราคาเริ่มต้นที่ 35฿</p>
+                    <h5 class="card-title">Galaxy S25 Ultra</h5>
+                    <p class="card-text">ราคาเริ่มต้นที่ ฿40,900.00</p>
                     <p class="card-text">สินค้าในคลังเหลือ 78 ชิ้น</p>
-                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยนะคะ</a>
+                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยครับ</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="https://ae01.alicdn.com/kf/S95d0c0c8d86e4f56933f51339b3abeb0u.jpg" class="card-img-top" alt="...">
+                <img src="https://images.samsung.com/is/image/samsung/p6pim/th/2501/gallery/th-galaxy-s25-s931-534321-sm-s931blgcthl-thumb-544696922?$492_492_PNG$" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">พวงกุญแจ สติช</h5>
-                    <p class="card-text">ราคาเริ่มต้นที่ 39฿</p>
+                    <h5 class="card-title">Galaxy S25 </h5>
+                    <p class="card-text">ราคาเริ่มต้นที่ ฿24,900.00</p>
                     <p class="card-text">สินค้าในคลังเหลือ 210 ชิ้น</p>
-                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยนะคะ</a>
+                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยครับ</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="https://lzd-img-global.slatic.net/g/ff/kf/S58543ef2719a407f85f405a245c95b86X.jpg_720x720q80.jpg" class="card-img-top" alt="...">
+                <img src="https://images.samsung.com/is/image/samsung/p6pim/th/2401/gallery/th-galaxy-s24-s928-490283-sm-s928blbqthl-thumb-539391466?$492_492_PNG$" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">พวงกุญแจ เป็ดน้อย</h5>
-                    <p class="card-text">ราคาเริ่มต้นที่ 39฿</p>
+                    <h5 class="card-title">Galaxy S24 Ultra</h5>
+                    <p class="card-text">ราคาเริ่มต้นที่ ฿32,900.00/p>
                      <p class="card-text">สินค้าในคลังเหลือ 277 ชิ้น</p>
-                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยนะคะ</a>
+                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยครับ</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="https://tse1.mm.bing.net/th/id/OIP.VfT7CWe5nW4v35oDAkY3PQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" class="card-img-top" alt="...">
+                <img src="https://images.samsung.com/is/image/samsung/p6pim/th/2401/gallery/th-galaxy-s24-plus-sm-s926bzvcthl-thumb-539308763?$492_492_PNG$" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">พวงกุญแจ นกเเพนกวิน</h5>
-                    <p class="card-text">ราคาเริ่มต้นที่ 45฿</p>
+                    <h5 class="card-title">Galaxy S24+</h5>
+                    <p class="card-text">ราคาเริ่มต้นที่ 38,900 ฿</p>
                     <p class="card-text">สินค้าในคลังเหลือ 360 ชิ้น</p>
-                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยนะคะ</a>
+                    <a href="#" class="btn btn-primary">สนใจสั่งซื้อ กดตรงติดต่อได้เลยครับ</a>
                 </div>
             </div>
         </div>
