--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,8 +1,8 @@
 {% include 'base.html' %}
 <div class="container mt-5">
     <h1>≽^·༚·ติดต่อเราได้ที่🎀≼</h1>
-    <p>📞 เบอร์: 062-517-0235</p>
-    <p>facebook : Phattharawadeeꕥ ィ </p>
+    <p>📞 เบอร์: 080-113-4451</p>
+    <p>facebook : Sitthinan Cys</p>
 </div>
 <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
@@ -11,12 +11,7 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://down-ph.img.susercontent.com/file/ph-11134207-7qul2-lfwhfozt9z74f6" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
+        
     </div>
     <div class="carousel-item">
       <img src="https://tse3.mm.bing.net/th/id/OIP.qL6BItdppGh9wsNZZ5FHhgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" class="d-block w-100" alt="...">
