--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 {% include 'base.html' %}
 <div class="container mt-5">
-    <h1>ยินดีต้อนรับเข้าสู่ร้านขายพวงกุญแจ by phattharawadee </h1>
-    <p>นี่คือหน้าแรกของร้านขายพวงกุญแจของเราค่ะ</p>
-    <p>สามารถกดเข้าชมพวงกุญแจสุดน่ารักของเราเพิ่มได้ตรง เกี่ยวกับเลยนะคะ</p>
+    <h1>ยินดีต้อนรับเข้าสู่ร้านขายโทรศัพท์ by Sitthinan </h1>
+    <p>นี่คือหน้าแรกของร้านขายโทรศัพท์</p>
 </div>
 <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
@@ -12,7 +11,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://lzd-img-global.slatic.net/g/ff/kf/Sd40fc398ca614564a49506a3b91a05cbu.jpg_720x720q80.jpg" class="d-block w-100" alt="...">
+      <img src="https://images.samsung.com/th/smartphones/galaxy-s25-ultra/buy/kv_global_PC_v2.jpg?imbypass=true" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="https://i.etsystatic.com/26649320/r/il/3d4baa/4649067621/il_300x300.4649067621_mqss.jpg" class="d-block w-100" alt="...">
